nullaway_error_44ad0d66-6301-4c57-84a0-9e0341cd9bf7.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/entities/StaticShadow.java:125: error: [NullAway] initializer method does not guarantee @NonNull field shadowType (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public StaticShadow(CollisionBox collisionBox) {
         ^
    (see http://t.uber.com/nullaway )
